syntax = "proto3";

package istio.mixer.adapter.sample.myApa;

import "mixer/v1/template/extensions.proto";
import "mixer/v1/template/standard_types.proto";

option (istio.mixer.v1.template.template_variety) = TEMPLATE_VARIETY_ATTRIBUTE_GENERATOR;

/* myapa template is ..
*/
message Template {
    int64 int64Primitive = 1;

    bool boolPrimitive = 2;

    double doublePrimitive = 3;

    string stringPrimitive = 4;

    map<string, int64> dimensionsFixedInt64ValueDType = 5;

    istio.mixer.v1.template.TimeStamp timeStamp = 6;

    istio.mixer.v1.template.Duration duration = 7;

    map<string, Resource3> res3_map = 8;

    istio.mixer.v1.template.IPAddress ip_addr = 11;

    istio.mixer.v1.template.DNSName dns_name = 12;

    istio.mixer.v1.template.EmailAddress email_addr = 13;

    istio.mixer.v1.template.Uri uri = 14;
}

message OutputTemplate {

    int64 int64Primitive = 1;

    bool boolPrimitive = 2;

    double doublePrimitive = 3;

    string stringPrimitive = 4;

    istio.mixer.v1.template.TimeStamp timeStamp = 6;

    istio.mixer.v1.template.Duration duration = 7;

    istio.mixer.v1.template.IPAddress ip_addr = 11;

    istio.mixer.v1.template.DNSName dns_name = 12;

    istio.mixer.v1.template.EmailAddress email_addr = 13;

    istio.mixer.v1.template.Uri uri = 14;

    map<string, string> out_str_map = 15;
}


message Resource1 {
    string str = 1;
    Resource1 self_ref_res1 = 3;
    Resource2 resRef2 = 2;
}

message Resource2 {
    string str = 1;
    Resource3 res3 = 2;
    map<string, Resource3> res3_map = 3;
}

// resource3 comment
message Resource3 {

    int64 int64Primitive = 1;

    bool boolPrimitive = 2;

    double doublePrimitive = 3;

    string stringPrimitive = 4;

    map<string, int64> dimensionsFixedInt64ValueDType = 5;

    istio.mixer.v1.template.TimeStamp timeStamp = 6;

    istio.mixer.v1.template.Duration duration = 7;
}
